[package]
authors = ["Sam Belliveau <sam.belliveau@gmail.com>"]
description = "a utility for creating markov chains based on dictionaries"
license = "GPL"
homepage = "https://github.com/Sam-Belliveau/Markov-Chain"
repository = "https://github.com/Sam-Belliveau/Markov-Chain"
readme = "readme.md"
name = "markov_chain"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "2.33.0"
